--- a/happen/www/css/index.css
+++ b/happen/www/css/index.css
@@ -45,6 +45,7 @@ body {
     padding:0px;/*
     text-transform:uppercase;*/
     width:100%;
+		overflow: hidden;
 }
 
 /* Portrait layout (default) */
@@ -101,8 +102,9 @@ h1 {
 
 /* Happen main styles */
 .nav-bar {
-    position: absolute;
+    position: fixed;
     width: 100%;
+		bottom: 0px;
     height: 72px;
     clear: both;
     background: #f8f8f8;
@@ -115,7 +117,7 @@ h1 {
     clear: both;
     background: #fff;
     padding: 72px 0px 0px 0px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .tab-bar {
