--- a/happen/www/css/index.css
+++ b/happen/www/css/index.css
@@ -20,6 +20,17 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
+#wrapper {
+	position: absolute;
+	z-index: 1;
+	top: 72px;
+	bottom: 50px;
+	left: 0;
+	width: 100%;
+	background: #ccc;
+	overflow: hidden;
+}
+
 body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
@@ -102,22 +113,38 @@ h1 {
 
 /* Happen main styles */
 .nav-bar {
-    position: fixed;
+    position: absolute;
     width: 100%;
-		bottom: 0px;
     height: 72px;
     clear: both;
     background: #f8f8f8;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
+		z-index: 2;
 }
 
 .main {
     width: 100%;
-    height: 445px;
-    clear: both;
+		clear: both;
     background: #fff;
-    padding: 72px 0px 0px 0px;
-    overflow: hidden;
+   /* overflow: auto;*/
+	 	position: absolute;
+		z-index: 1;
+		-webkit-tap-highlight-color: rgba(0,0,0,0);
+		-webkit-transform: translateZ(0);
+		-moz-transform: translateZ(0);
+		-ms-transform: translateZ(0);
+		-o-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		-webkit-text-size-adjust: none;
+		-moz-text-size-adjust: none;
+		-ms-text-size-adjust: none;
+		-o-text-size-adjust: none;
+	  text-size-adjust: none;
 }
 
 .tab-bar {
@@ -128,6 +155,7 @@ h1 {
     clear: both;
     background: #f8f8f8;
     border-top: 1px solid rgba(0, 0, 0, .2);
+		z-index: 2;
 }
 
 /* Happen newsfeed */
