--- a/happen/platforms/android/assets/www/css/index.css
+++ b/happen/platforms/android/assets/www/css/index.css
@@ -158,6 +158,65 @@ h1 {
 	z-index: 2;
 }
 
+.nav-item {
+    width: 10%;
+    height: 100%;
+    float: left;
+    color: #68d2a4;
+    font-size: 30px;
+}
+
+.nav-center {
+    width: 80%;
+    height: 100%;
+    float: left;
+    text-align: center;
+}
+
+#nav-left {
+    width: 100px;
+    float: left;
+    height:30px;
+    border-top-left-radius: 10px;
+    -moz-border-top-left-radius: 10px;
+    -webkit-border-top-left-radius:10px;
+    border-bottom-left-radius: 10px;
+    -moz-border-bottom-left-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    border:2px solid #3a3b49;
+    border-right-width:0px;
+    background-color:#f8f8f8;
+    color: #3a3b49;;
+    font-size: 16px;
+}
+
+#nav-left:hover {
+    background-color: #3a3b49;
+    color: #f8f8f8;
+}
+
+#nav-right {
+    width:100px;
+    float: left;
+    height:30px;
+    border-top-right-radius: 10px;
+    -moz-border-top-right-radius: 10px;
+    -webkit-border-top-right-radius:10px;
+    border-bottom-right-radius: 10px;
+    -moz-border-bottom-right-radius: 10px;
+    -webkit-border-bottom-right-radius:10px;
+    border:2px solid #3a3b49;
+    border-left-width:0px;
+    background-color:#f8f8f8;
+    color: #3a3b49;;
+    font-size: 16px;
+}
+
+#nav-right:hover {
+    background-color: #3a3b49;
+    color: #f8f8f8;
+}
+
 /* Happen newsfeed */
 .news-item {
     display: block;
