--- a/happen/www/css/index.css
+++ b/happen/www/css/index.css
@@ -163,7 +163,8 @@ h1 {
     height: 100%;
     float: left;
     color: #68d2a4;
-    font-size: 30px;
+    font-size: 35px;
+    font-weight: lighter;
 }
 
 .nav-center {
