--- a/happen/platforms/android/assets/www/css/index.css
+++ b/happen/platforms/android/assets/www/css/index.css
@@ -163,7 +163,7 @@ h1 {
     height: 100%;
     float: left;
     color: #68d2a4;
-    font-size: 30px;
+    font-size: 35px;
 }
 
 .nav-center {
@@ -225,6 +225,30 @@ h1 {
     clear: both;
     padding: 0px;
     border-bottom: 1px solid rgba(0, 0, 0, .1);
+}
+
+#wrapper2 {
+    width: 100%;
+    height: 100%;
+}
+
+.wrapper3 {
+    width: 100%;
+    height: 100%;
+}
+
+.news-metoo {
+    width: 100%;
+    height: 100%;
+    background-color: #68d2a4;
+    font-size: 25px;
+    color: #fff;
+}
+
+.news-delete {
+    background: #e86060;
+    font-size: 50px;
+    color: #fff;
 }
 
 a.news-photo {
